# skullking

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_RL_TECHNIQUES.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  EPISODE_DESIGN.md  README.md  README_PYTHON.md  TRAINING_IMPROVEMENTS.md  TRAINING_LOG.md  ULTRATHINK_ANALYSIS.md  V9_BENCHMARKS.md  V9_OPTIMIZATION_PLAN.md  agent_test_results.txt  docker-compose-production.yml  docker-compose.dev.yml  docker-compose.python.yml  docker-compose.yml  pyproject.toml  reglas.md  run_game.py  test_current_agent.py
app/: __init__.py  config.py  constants.py  main.py
app/api/: ability_handlers.py  game_handler.py  responses.py  routes.py  websocket.py
app/bots/: __init__.py  base_bot.py  random_bot.py  rl_bot.py  rule_based_bot.py  selfplay_bot.py
app/gym_env/: __init__.py  observation_fast.py  skullking_env.py  skullking_env_ability.py  skullking_env_enhanced.py  skullking_env_hierarchical.py  skullking_env_masked.py
app/models/: __init__.py  card.py  deck.py  enums.py  game.py  game_event.py  pirate_ability.py  player.py  round.py  trick.py
app/repositories/: game_repository.py
app/services/: event_recorder.py  game_serializer.py  log_service.py  publisher_service.py  snapshot_service.py
app/training/: __init__.py  analyze_efficiency.py  benchmark_training.py  callbacks.py  train_ability.py  train_ppo.py  train_v9.py
archive/: README.md
archive/bots/: rl_bot_v4.py  selfplay_bot.py
archive/gym_env/: skullking_env.py  skullking_env_enhanced.py
archive/scripts/: analyze_training.py  deep_analysis.py  monitor_training.sh  optimize_hyperparameters.py  test_agent_detailed.py  train_masked_ppo.py  train_rl_agent.py  train_selfplay.py  train_ultra_ppo.py
archive/training_v8_experimental/: train_hierarchical.py
docker/development/: Dockerfile
docker/production/: Dockerfile
docs/: ABILITY_RL_ARCHITECTURE.md
frontend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.json  biome.json  index.html  metro.config.js  nginx.conf  oxlint.json  package-lock.json  package.json  renovate.json  tsconfig.json
frontend/.husky/: pre-commit
frontend/app/: +html.tsx  _layout.tsx  index.tsx
frontend/app/game/: [id].tsx
frontend/app/lobby/: [id].tsx
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AbilityModal.module.css  AbilityModal.tsx  BiddingModal.module.css  BiddingModal.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  Hand.module.css  Hand.tsx  Input.tsx  Modal.module.css  Modal.tsx  Scoreboard.module.css  Scoreboard.tsx  Settings.module.css  Settings.tsx  SettingsButton.tsx  TigressModal.module.css  TigressModal.tsx  TrickArea.module.css  TrickArea.tsx  index.ts
frontend/src/i18n/: en.json  es.json  index.ts
frontend/src/pages/: Game.module.css  Game.tsx  Home.module.css  Home.tsx  Lobby.module.css  Lobby.tsx  index.ts
frontend/src/services/: api.ts  sessionStorage.ts  sounds.ts  websocket.ts
frontend/src/stores/: gameStore.ts  messageHandlers.ts  stateValidator.ts
frontend/src/styles/: theme.css  theme.ts
frontend/src/types/: api.ts  game.ts
frontend/src/utils/: cardUtils.ts
responses/: events.go
scripts/: README.md  analyze_training.py  check_i18n.py  deep_analysis.py  deploy.sh  gym_example.py  optimize_hyperparameters.py  play_bot_game.py  test_agent_detailed.py  train_advanced_rl.py  train_masked_ppo.py  train_masked_ppo_v2.py  train_rl_agent.py  train_selfplay.py  train_ultra_ppo.py
static/: index.html
static/css/: style.css
static/js/: game.js  i18n.js  sounds.js
static/locales/: en.json  es.json
tests/: __init__.py
tests/test_api/: conftest.py  test_game_handler.py  test_multiplayer_game.py  test_routes.py
tests/test_bots/: test_bot_basic.py
tests/test_e2e/: __init__.py  test_full_game.py
tests/test_gym_env/: test_ability_env.py  test_ability_env_hypothesis.py
tests/test_models/: test_card.py  test_game_flow.py  test_game_rules.py  test_pirate_abilities.py
