[project]
name = "skullking"
version = "2.0.0"
description = "Modern Python implementation of Skull King card game with bot AI and Gymnasium environment"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "skullking"
version = "2.0.0"
description = "Modern Python implementation of Skull King card game with bot AI and Gymnasium environment"
authors = ["Skull King Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
motor = "^3.3.2"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
websockets = "^12.0"
gymnasium = "^0.29.1"
numpy = "^1.26.3"
python-dotenv = "^1.0.0"
stable-baselines3 = "^2.7.1"
tensorboard = "^2.20.0"
tqdm = "^4.67.1"
rich = "^14.2.0"
sb3-contrib = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Conflicts with formatter
    "ISC001",   # Conflicts with formatter
    "D",        # Docstrings - not enforced project-wide
    "ANN",      # Type annotations - not enforced project-wide
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "SLF001", "PLC0415", "ARG"]  # Tests: assert, magic values, late imports
"scripts/**/*.py" = ["T201", "INP001", "PTH", "PLR", "BLE001", "E501", "NPY002", "S", "ARG", "N806", "FBT", "C901", "RUF059", "TD", "FIX", "PLC0415", "SIM102"]  # Scripts
"run_game.py" = ["PTH", "S104", "S110", "BLE001"]  # Simple runner script
"test_current_agent.py" = ["BLE001", "NPY002", "S101"]  # Test script

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term"
filterwarnings = [
    "ignore::DeprecationWarning:httpx._client",
    "ignore:Unknown config option:pytest.PytestConfigWarning",
]
