[project]
name = "skullking"
version = "2.0.0"
description = "Modern Python implementation of Skull King card game with bot AI and Gymnasium environment"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "skullking"
version = "2.0.0"
description = "Modern Python implementation of Skull King card game with bot AI and Gymnasium environment"
authors = ["Skull King Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
motor = "^3.6.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
websockets = "^14.1"
gymnasium = "^1.0.0"
numpy = ">=2.2.0,<2.4"
numba = "^0.63.1"
python-dotenv = "^1.0.1"
stable-baselines3 = "^2.7.1"
tensorboard = "^2.20.0"
tqdm = "^4.67.1"
rich = "^14.2.0"
sb3-contrib = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.16.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
pyright = "^1.1.390"
ipython = "^8.31.0"
# Code quality tools
vulture = "^2.14"
bandit = {extras = ["toml"], version = "^1.8.0"}
radon = "^6.0.1"
xenon = "^0.9.3"
import-linter = "^2.1"
hypothesis = "^6.122.0"
beartype = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Conflicts with formatter
    "ISC001",   # Conflicts with formatter
    "D",        # Docstrings - not enforced project-wide
    "ANN",      # Type annotations - not enforced project-wide
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "SLF001", "PLC0415", "ARG"]  # Tests: assert, magic values, late imports
"scripts/**/*.py" = ["T201", "INP001", "PTH", "PLR", "BLE001", "E501", "NPY002", "S", "ARG", "N806", "FBT", "C901", "RUF059", "TD", "FIX", "PLC0415", "SIM102"]  # Scripts
"run_game.py" = ["PTH", "S104", "S110", "BLE001"]  # Simple runner script
"test_current_agent.py" = ["BLE001", "NPY002", "S101"]  # Test script
"app/gym_env/**/*.py" = ["S101", "TC001", "PLR0913", "PLR0912", "PLR0915", "PLR0911", "PLR2004", "C901", "FBT", "RET504"]  # Gym envs: assert, complexity, boolean args, return clarity

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term"
filterwarnings = [
    "ignore::DeprecationWarning:httpx._client",
    "ignore:Unknown config option:pytest.PytestConfigWarning",
]

# Pyright - stricter type checking than mypy
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportShadowedImports = "error"
reportIncompatibleVariableOverride = "error"
reportMissingTypeStubs = "warning"
exclude = ["tests", "scripts", ".venv", "**/__pycache__"]

# Bandit - security scanner
[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]
skips = ["B101"]  # assert is fine in gym envs

# Coverage - enforce minimum test coverage
[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/training/*", "app/gym_env/wrappers.py"]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# Import-Linter - architecture enforcement
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Gym envs should not import training"
type = "forbidden"
source_modules = ["app.gym_env"]
forbidden_modules = ["app.training"]

[[tool.importlinter.contracts]]
name = "Models should not import API"
type = "forbidden"
source_modules = ["app.models"]
forbidden_modules = ["app.api"]

[[tool.importlinter.contracts]]
name = "Bots should not import API"
type = "forbidden"
source_modules = ["app.bots"]
forbidden_modules = ["app.api"]
